# s-analysis-backend

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  nginx.conf  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
api/: __init__.py  schemas.py
core/: __init__.py  decorators.py  exceptions.py  logger.py
database/: __init__.py  transaction.py
docs/: INCREMENTAL_CRAWLING.md  README.md
migrations/: __init__.py
models/: history.py  stock.py  trading.py
scripts/: incremental_crawler.py  setup_dev.py  test_runner.py
scripts/database/: __init__.py
scripts/deployment/: __init__.py  collect_data.py
services/: data_collector.py  history_service.py  stock_service.py  trading_service.py
tests/: __init__.py  conftest.py  factories.py  test_integration.py  test_models.py  test_services.py  test_stock_api.py  test_utils.py
views/: api_test.py  data_collector.py  health.py  history.py  stock.py  trading.py
